# learn-gfx-hal

./: .travis.yml  00_opening_a_window.html  01_drawing_a_triangle.html  Cargo.toml  README.md  appveyor.yml  build.bat  index.html  print.html  run.bat  searchindex.js  searchindex.json
book/: book.toml
book/src/: 00_opening_a_window.md  00_requirements.md  01_drawing_a_triangle.md  01_opening_a_window.md  02_drawing_a_triangle.md  SUMMARY.md
examples/: 00_base_code.rs  hello_winit.rs
