[package]
name = "learn-gfx-hal"
version = "0.1.0"
authors = ["Lokathor <zefria@gmail.com>", "StarToaster"]
repository = "https://github.com/rust-console/learn-gfx-hal"
readme = "README.md"
keywords = ["gfx-hal", "tutorial"]
edition = "2018"
description = "A tutorial for using that monster of a library."
license = "Apache-2.0"

[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
log = "0.4.0"
env_logger = "0.5.12"
winit = "0.18"
gfx-hal = "0.1"
#glsl-to-spirv = "0.1.6"

[dependencies.gfx-backend-vulkan]
version = "0.1"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.1"
optional = true
